[gd_scene load_steps=24 format=2]

[ext_resource path="res://Enemies/Floater/Sprites/Floater_Dying_2.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Floater/Sprites/Floater_Default_9.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Floater/Sprites/Floater_Default_5.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Floater/Sprites/Floater_Dying_5.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Floater/Sprites/Floater_Default_8.png" type="Texture" id=5]
[ext_resource path="res://Enemies/Floater/Sprites/Floater_Default_6.png" type="Texture" id=6]
[ext_resource path="res://Enemies/Floater/Sprites/Floater_Dying_1.png" type="Texture" id=7]
[ext_resource path="res://Enemies/Floater/Sprites/Floater_Dying_3.png" type="Texture" id=8]
[ext_resource path="res://Enemies/Floater/Sprites/Floater_Default_2.png" type="Texture" id=9]
[ext_resource path="res://Enemies/Floater/Sprites/Floater_Dying_0.png" type="Texture" id=10]
[ext_resource path="res://Enemies/Floater/Sprites/Floater_Default_10.png" type="Texture" id=11]
[ext_resource path="res://Enemies/Floater/Sprites/Floater_Default_4.png" type="Texture" id=12]
[ext_resource path="res://Enemies/Floater/Floater.gd" type="Script" id=13]
[ext_resource path="res://Enemies/Floater/Sprites/Floater_Default_1.png" type="Texture" id=14]
[ext_resource path="res://Enemies/Floater/Sprites/Floater_Default_11.png" type="Texture" id=15]
[ext_resource path="res://Enemies/Floater/Sprites/Floater_Default_3.png" type="Texture" id=16]
[ext_resource path="res://Enemies/Floater/Sprites/Floater_Default_7.png" type="Texture" id=17]
[ext_resource path="res://Enemies/Floater/Sprites/Floater_Dying_4.png" type="Texture" id=18]
[ext_resource path="res://Enemies/Floater/Sprites/Floater_Dead_0.png" type="Texture" id=19]
[ext_resource path="res://Enemies/Floater/Floater_hurt.wav" type="AudioStream" id=20]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 9 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 17 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 11 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 8.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 8 ), ExtResource( 18 ), ExtResource( 4 ) ],
"loop": false,
"name": "dying",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 1.88702, 3.24597 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 2, 4 )

[node name="Floater" type="AnimatedSprite"]
position = Vector2( 0, 5 )
frames = SubResource( 5 )
frame = 10
playing = true
offset = Vector2( 0, -5 )
script = ExtResource( 13 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -7 )
shape = SubResource( 6 )

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -5 )
shape = SubResource( 7 )

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -10.0
[connection signal="animation_finished" from="." to="." method="_on_Floater_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
